--- a/src/html/blocks/card.html
+++ b/src/html/blocks/card.html
@@ -12,15 +12,15 @@
 
         <div class="card__row">
             <div class="card__image">
-                <div class="card__img-1">
-                    <img id="main-image" src="./../../../img/card-auto/01.jpg" alt="Haval">
+                <div id="large-image" class="card__img-1">
+                    <img src="./../../../img/card-auto/01.jpg" alt="Haval">
                 </div>
 
                 <div class="card__img-wrap">
                     <div class="card__img-2">
                         <img src="./../../../img/card-auto/02.jpg" alt="Haval" onclick="changeImage(this)">
                     </div>
-                    <div class="card__img-2">
+                    <div  class="card__img-2">
                         <img src="./../../../img/card-auto/03.jpg" alt="Haval" onclick="changeImage(this)">
                     </div>
                     <div class="card__img-2">
@@ -40,6 +40,28 @@
                     </div>
                     <div class="card__img-2">
                         <img src="./../../../img/card-auto/06.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/02.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div  class="card__img-2">
+                        <img src="./../../../img/card-auto/03.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/04.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/05.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/06.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/02.jpg" alt="Haval" onclick="changeImage(this)">
+                    </div>
+                    <div class="card__img-2">
+                        <img src="./../../../img/card-auto/03.jpg" alt="Haval" onclick="changeImage(this)">
                     </div>
                 </div>
             </div>
