--- a/src/html/blocks/catalog.html
+++ b/src/html/blocks/catalog.html
@@ -66,22 +66,8 @@
                             </label>
                         </div>
 
-                        <div class="filter__items filter__items-hidden">
+                        <div class="filter__items-hidden">
                             <div class="filter__items">
-                                <div class="filter__item">
-                                    <input type="checkbox" class="filter-checkbox" id="turbo" name="turbo" value="turbo" />
-                                    <label class="filter__item-label" for="turbo">
-                                        Турбированный
-                                    </label>
-                                </div>
-    
-                                <div class="filter__item">
-                                    <input type="checkbox" class="filter-checkbox" id="atmospheric" name="atmospheric" value="atmospheric" />
-                                    <label class="filter__item-label" for="atmospheric">
-                                        Атмосферный
-                                    </label>
-                                </div>
-    
                                 <div class="filter__item">
                                     <input type="checkbox" class="filter-checkbox" id="suv-5" name="suv-5" value="suv-5" />
                                     <label class="filter__item-label" for="suv-5">
