--- a/src/html/catalog-card.html
+++ b/src/html/catalog-card.html
@@ -21,21 +21,31 @@
 	
 
 	@@include('blocks/footer.html')
-	<script src="./js/index.bundle.js"></script>
+	<script src="./js/card.bundle.js"></script>
 
+
+	<!-- Код не работает внутри сборки card.js -->
 	<script>
-		function changeImage(element, webpSrc, jpgSrc) {
-		const mainImageWebp = document.getElementById('main-image-webp');
-		const mainImageJpg = document.getElementById('main-image-jpg');
-		const mainImage = document.getElementById('main-image');
+		function changeImage(element) {
+			const largeImage = document.getElementById('large-image');
+			const smallImage = element.cloneNode(true); 
 
+			largeImage.innerHTML = smallImage.outerHTML;
 
-		mainImageWebp.srcset = `${webpSrc} 1x, ${webpSrc.replace('.webp', '@2x.webp')} 2x`;
-		mainImageJpg.srcset = `${jpgSrc} 1x, ${jpgSrc.replace('.jpg', '@2x.jpg')} 2x`;
+			const smallImages = document.querySelectorAll('.card__img-2');
 
-	
-		mainImage.src = element.src;
-	}
+			smallImages.forEach(card => {
+				const pictureElement = card.querySelector('picture');
+				if (pictureElement) {
+					const img = pictureElement.querySelector('img');
+					if (img) {
+						img.classList.remove('active');
+					}
+				}
+			});
+			
+			element.classList.add('active');
+        }
 	</script>
 </body>
 
