--- a/src/html/blocks/header-2.html
+++ b/src/html/blocks/header-2.html
@@ -18,8 +18,9 @@
         <div class="container">
             <div class="header__info2">
                 <div class="logo__wrapper2">
-                    <button class="mobile-nav-btn">
-                        <div class="nav-icon"></div>
+
+                    <button class="mobile-nav-btn mobile-nav-btn2">
+                        <div class="nav-icon nav-icon2"></div>
                     </button>
     
                     <a href="index.html" class="logo2">LO<span class="logo__accent">GO</span></a>
@@ -55,9 +56,8 @@
                 <button class="header__info-search2">
                     <img src="./..//..//img/icons/search-mobile02.svg" alt="">
                 </button>
-
-                @@include('mobile-nav.html')
             </div>
         </div>
+        @@include('mobile-nav2.html')
     </div>
 </header>
