--- a/src/html/blocks/mobile-nav2.html
+++ b/src/html/blocks/mobile-nav2.html
@@ -1,4 +1,4 @@
-<div class="mobile-nav">
+<div class="mobile-nav2">
 	<ul class="mobile-nav__list mobile-nav__list2">
 		<li><a href="#!">О нас</a></li>
 		<li><a href="#!">Доставка и оплата</a></li>
