--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	@@include('blocks/header.html')
-	<div class="header2div" style="display:none;">
+	<div class="header2div">
 		@@include('blocks/header-2.html')
 	</div>
 	<main class="main">
