--- a/src/html/blocks/banners.html
+++ b/src/html/blocks/banners.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-pagination swiper-dots"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
