--- a/src/html/catalog-auto.html
+++ b/src/html/catalog-auto.html
@@ -20,6 +20,10 @@
 	</main>
 	
 	@@include('blocks/footer.html')
+	
+
+	
+	<div class="header-overlay"></div>
 	<script src="./js/catalog.bundle.js"></script>
 </body>
 
